@@ -17,6 +17,28 @@ smileydata = {
     'wink.gif': ('; )', ';)', ';-)', ':wink:'),
 }
 
+alt_name = {
+    'angry.gif': 'Angry',
+    'apprehension.gif': 'Apprehension',
+    'arrow.gif': 'Arrow',
+    'confusion.gif': 'Confusion',
+    'cool.gif': 'Cool',
+    'embarrassment.gif': 'Oops',
+    'exclamation.gif': 'Exclamation',
+    'happy.gif': 'Happy',
+    'idea.gif': 'Idea',
+    'mad.gif': 'Evil',
+    'question.gif': 'Question',
+    'sad.gif': 'Sad',
+    'shocked.gif': 'Shocked',
+    'surprised.gif': 'Surprised',
+    'twisted.gif': 'Twisted',
+    'wink.gif': 'Wink',
+}
+
+def get_alt_name(smiley):
+    return alt_name[smiley]
+
 def flatten_smileydata(d=smileydata):
     ret = []
     for key, value in d.items():
@@ -29,6 +51,9 @@ def emoticons(text, imagedir):
     if imagedir.endswith('/'):
         imagedir = imagedir[:-1]
     for image, smiley in flatten_smileydata():
-        text = text.replace(smiley, '<img src="%s/%s" />' % (imagedir, image))
+        smiley_html = '<img src="%s/%s" alt="%s" />' % (imagedir,
+                                                        image,
+                                                        get_alt_name(image))
+        text = text.replace(smiley, smiley_html)
     return text
 
